# OpenPode

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
3D_printing_models/: Attache_PCA_L.STL  Attache_PCA_R.STL  attache_PCA_milieu.STL  attache_milieu.STL  bi_axe.STL  extremite_patte.STL  head.STL  milieu_patte_droite.STL  milieu_patte_gauche.STL  support_bas.STL  support_haut.STL  support_rasp_1.STL  support_rasp_2.STL  support_raspi.STL
Debug/: Hexapode  makefile  objects.mk
Debug/src/: Hexapode.d  PCA9685.d  Paw.d  Paw_math_model.d  Servo.d  Side.d  i2cdev.d  main.d  subdir.mk  time_t.d  timer_t.d
conf/: ds4drv.conf
sources servo/: Gpio.cpp  Gpio.h
src/: Hexapode.cpp  Hexapode.h  PCA9685.cpp  PCA9685.h  Paw.cpp  Paw.h  Paw_math_model.cpp  Paw_math_model.h  Servo.cpp  Servo.h  Side.cpp  Side.h  config.h  crash_handler.h  enums.h  exec.cpp  exec.h  hexapode_description.h  hexapode_dimensions.h  i2cdev.cpp  i2cdev.h  main.cpp  math_utils.h  time_t.cpp
src/Bluetooth/: BtAddress.cpp  BtAddress.h  BtPacket.cpp  BtPacket.h  BtSocket.cpp  BtSocket.h  RfcommListener.cpp  RfcommListener.h  RfcommSocket.cpp  RfcommSocket.h
src/PCAmodule/: PCA9685.h
src/controller/: Movement_controller.cpp  Movement_controller.h  Movement_controller_PS4.cpp  Movement_controller_PS4.h  Movement_controller_base.cpp  Movement_controller_base.h  PS4Controller.cpp  PS4Controller.h
src/error_detection/: Error_detection.cpp  Error_detection.h
src/error_management/: Error_actions.cpp  Error_actions.h  Error_detection.cpp  Error_detection.h  Error_no_movement.cpp
src/hexapode/: Hexapode.cpp  Hexapode.h  hexapode_dimensions.h
src/i2c/: i2cdev.cpp
src/led/: led_controller.cpp  led_controller.h
src/paw/: Paw.cpp  (+3 more)
(+32 files in other folders)
